test/tests/errors/error-class-file-out-of-scope2.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        file f withbuffer b: int;
    }

    b = 1;
}